stylesheets/chatpanel.scss: added min-width to chat panel to prevent message overlap in small windows. client/src/containers/ChatPanel.jsx: User message form text input now has placeholder and you do not need to delete your previous message.

--- a/client/src/stylesheets/chatpanel.scss
+++ b/client/src/stylesheets/chatpanel.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  min-width: 500px;
 }
 
 #chat-box {
